Added location to user criteria

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
         name="years_of_experience"
       /><br /><br />
 
+      <label for="location">Location:</label>
+      <input type="text" id="location" name="location" /><br /><br />
+
       <input type="submit" value="Submit" />
     </form>
   </body>
